--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
+    <!--TODO: Solo para probar indicidencia ASW1279. Restaurar a la 2.2.0-SNAPSHOT -->
     <groupId>com.santalucia.arq.ams</groupId>
     <artifactId>ams-parent-sl-sw</artifactId>
-    <version>2.2.0-SNAPSHOT</version>
+    <version>2.1.0-RELEASE</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>com.santalucia.example</groupId>
@@ -78,10 +79,11 @@
       <groupId>com.santalucia.arq.ams</groupId>
       <artifactId>ams-componentes-web</artifactId>
     </dependency>
-
+    <!--TODO: Solo para probar indicidencia ASW1279. Eliminar solo version en la dependencia -->
     <dependency>
       <groupId>com.santalucia.arq.ams</groupId>
       <artifactId>ams-componentes-feign-security</artifactId>
+      <version>2.1.1-RELEASE</version>
     </dependency>
 
     <dependency>
@@ -94,10 +96,13 @@
       <artifactId>ams-starter-observability</artifactId>
     </dependency>
 
+    <!--TODO: Solo para probar indicidencia ASW1279. Restaurar componente -->
+<!--
     <dependency>
       <groupId>com.santalucia.arq.ams</groupId>
       <artifactId>ams-componentes-springdoc</artifactId>
     </dependency>
+-->
 
     <dependency>
       <groupId>com.santalucia.arq.ams</groupId>
