--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -1,19 +1,16 @@
-debug: false # Enable debug logs.
+debug: true # Enable debug logs.
 trace: false # Enable trace logs.
 
 management:
   metrics:
     tags:
-      #Needed by micrometer +1.1.0
-      application: ${spring.application.name}
+      application: ${spring.application.name} #Needed by micrometer +1.1.0
 
 spring:
   main:
     allow-bean-definition-overriding: true
   application:
     name: example-app-11
-  banner:
-    location: classpath:santalucia-banner.txt
   cloud:
     kubernetes:
       enabled: false
@@ -29,23 +26,10 @@ info:
 logging:
   register-shutdown-hook: true
 
-# Desactivado en el profile default
-
-# kubernetes:
-#   manifests:
-#     enabled: false
-#   informer:
-#     enabled: false
 ---
 spring:
-  #Profile habilitado de forma automatica cuando se despliega en OCP
-  config:
-    activate:
-      on-profile:
-      - kubernetes
-  banner:
-    location: classpath:santalucia-banner.json
-#  mandatory-file-encoding: UTF-8
+  profiles: kubernetes #Profile habilitado de forma automatica cuando se despliega en OCP
+  #  mandatory-file-encoding: UTF-8
   cloud:
     kubernetes:
       enabled: true
@@ -59,19 +43,12 @@ spring:
         monitoring-secrets: false
       config:
         name: ${spring.application.name}
-# kubernetes:
-#   manifests:
-#     enabled: true
-#   informer:
-#     enabled: true
+
 debug: false # Enable debug logs.
 trace: false # Enable trace logs.
 ---
 spring:
-  config:
-    activate:
-      on-profile:
-      - devops
+  profiles: devops #Profile para deshabilitar kubernetes
   mandatory-file-encoding: UTF-8
   cloud:
     kubernetes:
