--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -149,6 +149,7 @@ santalucia:
             - info
             - health
             - metrics
+            - startup
 
 ###########################
 #                         #
