--- a/pom.xml
+++ b/pom.xml
@@ -157,13 +157,13 @@
       <optional>true</optional>
     </dependency>
     
-    <!-- Clientes APIs
+    <!-- Clientes APIs -->
     <dependency>
       <groupId>com.santalucia.arq.ams.odl.recibos</groupId>
       <artifactId>recibos-odl-api-client</artifactId>
       <version>2.0.2-RELEASE</version>
     </dependency>
-     -->
+    
     
   </dependencies>
 
