--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   </parent>
   <groupId>com.santalucia.example</groupId>
   <artifactId>example-app-11</artifactId>
-  <version>2.3.3-SNAPSHOT</version>
+  <version>2.4.0-SNAPSHOT</version>
   <name>example-app-11</name>
   <description>Demo project for Spring Boot</description>
 
@@ -69,21 +69,25 @@
     <swagger.codegen.skip.client>false</swagger.codegen.skip.client>
     <mybatis.codegen.output.dir>src/main/java</mybatis.codegen.output.dir>
     <git.hooks.skip>false</git.hooks.skip>
-    <!--TODO: Solo para probar indicidencia ASW1279. Eliminar -->
-    <archunit.skip>true</archunit.skip>
   </properties>
 
   <dependencies>
+  
+<!-- <dependency> -->
+<!--     <groupId>org.springframework.cloud</groupId> -->
+<!--     <artifactId>spring-cloud-starter-bootstrap</artifactId> -->
+<!-- </dependency> -->
 
     <dependency>
       <groupId>com.santalucia.arq.ams</groupId>
       <artifactId>ams-componentes-web</artifactId>
     </dependency>
-    <!--TODO: Solo para probar indicidencia ASW1279. Eliminar solo version en la dependencia -->
+ 
     <dependency>
       <groupId>com.santalucia.arq.ams</groupId>
       <artifactId>ams-componentes-feign-security</artifactId>
     </dependency>
+     
 
     <dependency>
       <groupId>com.santalucia.arq.ams</groupId>
@@ -161,13 +165,14 @@
       <optional>true</optional>
     </dependency>
     
-    <!-- Clientes APIs -->
+    <!-- Clientes APIs 
     <dependency>
       <groupId>com.santalucia.arq.ams.odl.recibos</groupId>
       <artifactId>recibos-odl-api-client</artifactId>
       <version>2.0.2-RELEASE</version>
     </dependency>
-    
+    -->
+
     
   </dependencies>
 
