--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
     <swagger.codegen.skip.client>false</swagger.codegen.skip.client>
     <mybatis.codegen.output.dir>src/main/java</mybatis.codegen.output.dir>
     <git.hooks.skip>false</git.hooks.skip>
-    <archunit.skip>false</archunit.skip> <!-- FIXME: Temporal hasta que RAFA arregle la regla -->
+    <nullaway.severity>OFF</nullaway.severity> <!-- FIXME: temporal -->
   </properties>
 
   <dependencies>
