chore: fix error-prone date

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -168,6 +168,7 @@ spring:
 #                         #
 ###########################
 santalucia:
+  default-zone-id: ${TZ:Europe/Madrid}
   ams:
     features:
       micrometer:
