chore: fix upgrade arquetype

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -32,3 +32,10 @@ santalucia:
 
 helloWorld:
   url: http://localhost:${wiremock.server.port:8089}/hello-world/v1
+#deshabilitamos el tracing para los test
+opentracing:
+  jaeger:
+    enabled: false
+  spring:
+    web:
+      enabled: false
