--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.santalucia.arq.ams</groupId>
     <artifactId>ams-parent-sl-sw</artifactId>
-    <version>2.2.0-SNAPSHOT</version>
+    <version>2.2.0-RELEASE</version>
     <relativePath />
 
   </parent>
@@ -61,8 +61,6 @@
   </ciManagement>
 
   <properties>
-    <ams.version>2.2.0-SNAPSHOT</ams.version>
-    <!-- NACHO: Debido a pruebas -->
     <git.hooks.skip>false</git.hooks.skip>
     <mybatis.codegen.output.dir>src/main/java</mybatis.codegen.output.dir>
     <mybatis.generator.configurationFile>src/main/resources/mybatis/mybatis-generator.xml</mybatis.generator.configurationFile>
