--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.santalucia.arq.ams</groupId>
     <artifactId>ams-parent-sl-sw</artifactId>
-    <version>2.2.0-RELEASE</version>
+    <version>2.3.0-SNAPSHOT</version>
     <relativePath></relativePath>
   </parent>
   <groupId>com.santalucia.example</groupId>
@@ -90,10 +90,10 @@
       <groupId>com.santalucia.arq.ams</groupId>
       <artifactId>ams-componentes-database</artifactId>
     </dependency>
-    <dependency>
+    <!--<dependency>
       <groupId>com.santalucia.arq.ams</groupId>
       <artifactId>ams-componentes-retry</artifactId>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
